@@ -9,3 +9,4 @@ slicepoints:	5
 createFigure:	True
 minPeaks:	4
 minPeakSN:	9
+peakDetectionMin:	0.01
